[tool.poetry]
name = "yubival"
version = "0.1.0"
description = "Django app that runs a standalone Yubikey validation server"
authors = ["Nicolas Bruot <coremeltdown@bruot.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.0"
YubiOTP = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
