[tool.poetry]
name = "yubival"
version = "0.2.0"
description = "Django app that runs a standalone Yubikey validation server"
authors = ["Nicolas Bruot <coremeltdown@bruot.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/bruot/yubival"
repository = "https://github.com/bruot/yubival"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
include = [
    'LICENCE',
]

[tool.poetry.dependencies]
python = "^3.6"
Django = ">=2.2, <4.1"
YubiOTP = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^4.4.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
